# cw3

cw3/: pyproject.toml
cw3/cw3/: executed_operations.py  format_data.py  format_date.py  hidden_number.py  main.py  message.py  opendata.py
cw3/tests/: test_executed_operations.py  test_format_date.py  test_hidden_number.py  test_main.py  test_message.py
